# company

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.py  setup.cfg
api/: __init__.py  api_utilities.py  app.py  common.py  constants.py  model_routes.py  models.py  routes.py  services.py  typing.py  utils.py
api/apps/account/: __init__.py  account_utilities.py  parsers.py  routes.py  schemas.py  services.py  swagger_models.py  utils.py
api/apps/auth/: __init__.py  auth_middleware.py  auth_utilities.py  parsers.py  routes.py  schemas.py  utils.py
api/apps/common_services/: __init__.py  parsers.py  routes.py  schemas.py  services.py  swagger_models.py
api/apps/counterparty/: models.py  parsers.py  routes.py  schemas.py  swagger_models.py  validators.py
api/apps/invoice/: models.py  parsers.py  routes.py  schemas.py  services.py  swagger_models.py  validators.py
api/apps/order/: __init__.py  models.py  parsers.py  routes.py  schemas.py  services.py  swagger_models.py  validators.py
api/apps/order_specialized/: __init__.py  parsers.py  routes.py  schemas.py  services.py  swagger_models.py
api/apps/product/: __init__.py  models.py  parsers.py  routes.py  schemas.py  swagger_models.py  validators.py
api/apps/purchase/: __init__.py  models.py  parsers.py  routes.py  schemas.py  services.py  swagger_models.py  validators.py
api/apps/purchase_specialized/: __init__.py  parsers.py  routes.py  schemas.py  services.py  swagger_models.py
api/apps/sale/: __init__.py  models.py  parsers.py  routes.py  schemas.py  services.py  swagger_models.py  validators.py
api/apps/sale_specialized/: __init__.py  routes.py  schemas.py  services.py  swagger_models.py
api/apps/tax/: __init__.py  models.py  parsers.py  routes.py  schemas.py  services.py  swagger_models.py  validators.py
api/apps/tax_specialized/: __init__.py  routes.py  schemas.py  services.py  swagger_models.py
api/apps/user/: models.py  parsers.py  routes.py  schemas.py  swagger_models.py  validators.py
api/apps/user_specialized/: __init__.py  routes.py  schemas.py
api/common/: api_utilities.py  constants.py  model_routes.py  services.py
tests/: bases.py  conftest.py  testing_classes.py  testing_utilities.py
tests/apps/: __init__.py
tests/apps/account/: __init__.py  conftest.py  test_routes.py
tests/apps/auth/: test_routes.py
tests/apps/common/: __init__.py
tests/apps/counterparty/: __init__.py  conftest.py  factories.py  test_routes.py  test_tables.py
tests/apps/invoice/: __init__.py  conftest.py  factories.py  test_routes.py  test_tables.py
tests/apps/order/: __init__.py  conftest.py  factories.py  test_routes.py  test_tables.py
tests/apps/product/: __init__.py  conftest.py  factories.py  test_routes.py  test_tables.py
tests/apps/purchase/: __init__.py  conftest.py  factories.py  test_routes.py  test_tables.py
tests/apps/sale/: __init__.py  conftest.py  factories.py  test_routes.py  (+1 more)
(+157 files in other folders)
