[tool.poetry]
name = "company"
version = "0.1.0"
description = ""
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.20"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
xenon = "^0.9.1"
isort = "^5.12.0"
pre-commit = "^3.4.0"


[tool.black]
line-length = 88
include = '\.pyi?$'
force-exclude = """
    .pre-commit-config.yaml,
    poetry.lock,
    pyproject.toml,
    README.me
"""
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
  | .pre-commit-config.yaml
  | poetry.lock
  | pyproject.toml
  | README.md
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
